--- a/Project/Contect Us/contact-page/src/components/navigation/Navigation.module.css
+++ b/Project/Contect Us/contact-page/src/components/navigation/Navigation.module.css
@@ -1,16 +1,20 @@
-
-.navigation nav{
+.navigation {
+    padding:0 8px;
     display: flex;
-    justify-content: space-between;
-    padding: 0 8px;
     height: 72px;
-  
-  }
-  
- .navigation nav ul{
-      display: flex;
-      align-items: center;
-      list-style: none;
-      gap:24px;
-      font-weight: 500;
-  }
+    align-items: center;
+
+
+    justify-content: space-between;
+
+
+}
+
+.navigation ul {
+    display: flex;
+    gap: 24px;
+    list-style-type: none;
+    font-weight: 500;
+
+    
+}
